Added persistent menu, and icons

--- a/blocks.html
+++ b/blocks.html
@@ -7,10 +7,15 @@
   <title>Pattern Blocks</title>
   <meta name="darkreader-lock" />
 
-  <link rel="stylesheet" href="vision.css" />
-  <script src="commonfn.js"></script>
+  <!-- <script src="xx_borrowed/alljs.php"></script> -->
+  <script src="alljs.js"></script>
+  <!-- <link rel="stylesheet" href="xx_borrowed/allcss.php" /> -->
+  <link rel="stylesheet" href="allcss.css" />
+  <link rel="stylesheet" href="vision.css?v=01" />
   <script src="darkmode.js"></script>
-  <script defer src="settings.js"></script>
+  <script defer src="settings.js?v=01"></script>
+  <script defer src="topmenu.js"></script>
+
   <script src="customblock.js"></script>
 
   <style>
@@ -162,6 +167,7 @@
 </head>
 
 <body>
+
   <div id="ctrlbar">
     <div><a href="index.html"><img id="homeicon" src="img/home.svg" alt="home" /></a></div>
 
@@ -169,8 +175,10 @@
     <button id="reload">New Chart</button>
   </div>
 
+
   <div id="tileholder"></div>
   <div id="playfield"></div>
+
 
 
   <script>
@@ -340,12 +348,6 @@
     });
 
   </script>
-  <pre>
-
-TODO:
-- resizable grid setting
-
-</pre>
 </body>
 
 </html>
