--- a/fistbump.html
+++ b/fistbump.html
@@ -6,10 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Closed, Open, Flat</title>
   <meta name="darkreader-lock">
+
+  <!-- <script src="xx_borrowed/alljs.php"></script> -->
+  <script src="alljs.js"></script>
+  <!-- <link rel="stylesheet" href="xx_borrowed/allcss.php" /> -->
+  <link rel="stylesheet" href="allcss.css" />
   <link rel="stylesheet" href="vision.css?v=01" />
-  <script src="commonfn.js?v=01"></script>
   <script src="darkmode.js"></script>
   <script defer src="settings.js?v=01"></script>
+  <script defer src="topmenu.js"></script>
+
   <style>
     /* 
 https://gamedevelopment.tutsplus.com/picking-a-color-palette-for-your-games-artwork--gamedev-1174a */
@@ -99,13 +105,12 @@ https://gamedevelopment.tutsplus.com/picking-a-color-palette-for-your-games-artw
 
     <div><input type="checkbox" class="slider" id="colormode" /><label for="colormode">Color mode</label></div>
 
-
-
     <button id="reload">Reload</button>
 
   </div>
 
   <div id="fistbump"></div>
+
 
   <script>
     let states = [1, 2, 3];
