--- a/hartchart.html
+++ b/hartchart.html
@@ -58,7 +58,7 @@
 
 
     #qrplace {
-      display: inline-block;
+      display: none;
       position: relative;
       text-align: center;
       /* left: 50%;
@@ -67,7 +67,6 @@
     }
 
     .qrcode {
-      display: none;
       padding: 10px;
       background: #fff;
       position: absolute;
@@ -77,7 +76,7 @@
       z-index: 1000;
     }
 
-    #qrtoggle:checked~.qrcode {
+    #qrtoggle:checked~#qrplace {
       display: block;
     }
 
@@ -235,15 +234,16 @@
       </div>
     </div> -->
 
-
-    <div id="qrplace"></div>
-
+    <div>
+      <input type="checkbox" class="slider" id="qrtoggle" /><label for="qrtoggle">QR code</label>
+      <div id="qrplace"></div>
+    </div>
 
     <button id="reload">Reload</button>
 
   </div>
 
-  
+
   <div id="hartchart" class="contents">
     <div id="boxscale"><input type="range" id="scale" max="1" min="0.3" value="1" step="0.01" /></div>
     <div id="codehints"><input type="checkbox" class="slider" id="cheatcode" /><label for="cheatcode">Show Hints</label></div>
@@ -377,32 +377,6 @@
         }
 
       }
-
-
-      function getqr(data) {
-        let [w, h] = [250, 250];
-        let qrcode = document.createElement("a");
-        qrcode.className = "qrcode";
-        qrcode.href = data;
-        // qrcode.style = `padding:10px;background:#fff;position:absolute;left:50;top:1em;`;
-        // let theqrcode = 
-        new QRCode(qrcode, {
-          text: data,
-          width: w,
-          height: h,
-          colorDark: "#000",
-          colorLight: "#fff",
-          correctionLovel: QRCode.CorrectLevel.L,
-        });
-        // console.log(qrcode);
-
-
-        // input type="checkbox" class="slider" id="darkmode" checked="checked" /><label for="darkmode">Dark mode</label>
-        qrplace.innerHTML = `<input type="checkbox" class="slider" id="qrtoggle" /><label for="qrtoggle">QR code</label>`;
-        qrplace.append(qrcode);
-      }
-
-
 
 
       function nextletter(lastchar) {
