organize into folders

--- a/cpsaccades.html
+++ b/cpsaccades.html
@@ -8,13 +8,13 @@
   <meta name="darkreader-lock">
 
   <!-- <script src="xx_borrowed/alljs.php"></script> -->
-  <script src="alljs.js"></script>
+  <script src="js/alljs.js"></script>
   <!-- <link rel="stylesheet" href="xx_borrowed/allcss.php" /> -->
-  <link rel="stylesheet" href="allcss.css" />
-  <link rel="stylesheet" href="vision.css?v=01" />
-  <script src="darkmode.js"></script>
-  <script defer src="settings.js?v=01"></script>
-  <script defer src="topmenu.js"></script>
+  <link rel="stylesheet" href="css/allcss.css" />
+  <link rel="stylesheet" href="css/vision.css" />
+  <script src="js/darkmode.js"></script>
+  <script defer src="js/settings.js"></script>
+  <script defer src="js/topmenu.js"></script>
 
   <style>
     #saccades {
