--- a/hartchart.html
+++ b/hartchart.html
@@ -8,18 +8,18 @@
   <meta name="darkreader-lock">
 
   <!-- <script src="xx_borrowed/alljs.php"></script> -->
-  <script src="alljs.js"></script>
+  <script src="js/alljs.js"></script>
   <!-- <link rel="stylesheet" href="xx_borrowed/allcss.php" /> -->
-  <link rel="stylesheet" href="allcss.css" />
-  <link rel="stylesheet" href="vision.css?v=01" />
-  <script src="darkmode.js"></script>
-  <script defer src="settings.js?v=01"></script>
-  <script defer src="topmenu.js"></script>
+  <link rel="stylesheet" href="css/allcss.css" />
+  <link rel="stylesheet" href="css/vision.css" />
+  <script src="js/darkmode.js"></script>
+  <script defer src="js/settings.js"></script>
+  <script defer src="js/topmenu.js"></script>
 
-  <link rel="stylesheet" href="metronome.css" />
-  <script defer src="metronome.js"></script>
-  <script src="quotes.js"></script>
-  <script src="qrcode.min.js"></script>
+  <link rel="stylesheet" href="css/metronome.css" />
+  <script defer src="js/metronome.js"></script>
+  <script src="js/quotes.js"></script>
+  <script src="js/qrcode.min.js"></script>
 
   <style>
     body {
